--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,6 +29,14 @@
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="{{ "/assets/base.css" | relative_url }}">
 
+  <!-- JS -->
+  <script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
+
+  <script type="text/javascript" src="{{ "/assets/base.js" | relative_url }}"></script>
+
   <!-- TODO: make this work -->
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
 
