--- a/_sass/hi.scss
+++ b/_sass/hi.scss
@@ -3,5 +3,13 @@ main{
 }
 
 pre{
+  padding: 20px;
   background: #efefef;
+}
+
+.btn{
+  padding: 10px 15px;
+  background: blue;
+  color:#fff;
+  text-decoration: none;
 }
