--- a/_includes/form.html
+++ b/_includes/form.html
@@ -19,6 +19,7 @@
     <textarea class="fm" name="m_msg" placeholder="mgs"></textarea>
   </label>
 
+  <pre id="filename">---</pre>
   <pre id="post-matter">---</pre>
   <a class="btn" target="_new" href="#">submit</a>
 </form>
