--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,5 +3,18 @@ layout: default
 ---
 
 <h2>{{ entry.site }}</h2>
+{% for post in site.posts %}
+  <article class="{% if forloop.first %}first{% elsif forloop.last %}last{% else %}middle{% endif %}">
+		<div class="entry">
+      <a href="https://github.com/{{ post.author }}"><img src="https://github.com/{{ post.author }}.png?size=40" alt="{{ post.author }}"></a>
+      <div class="block">
+        <h5><a href="https://github.com/{{ post.author }}">{{ post.author }}</a> <a href="https://github.com/{{ post.author }}" class="date">{{ post.date | date: "%b %d, %Y" }}</a></h5>
+
+        {{ post.content }}
+      </div>
+		</div><!-- end .entry -->
+	</article>
+	{% if forloop.last %}{% else %}<div class="separater"></div>{% endif %}
+{% endfor %}
 
 {% include form.html %}
