--- a/_sass/hi.scss
+++ b/_sass/hi.scss
@@ -13,3 +13,36 @@ pre{
   color:#fff;
   text-decoration: none;
 }
+
+
+.entry{
+  padding: 15px 0;
+  border-top: 1px #ccc solid;
+  h5{
+    margin: 0 0 3px 0;
+    a{
+      text-decoration: none;
+    }
+    a:hover{
+      text-decoration: underline;
+    }
+    .date{
+      margin-left: 10px;
+      font-size: 12px;
+      color: #999;
+      font-weight: normal;
+      font-family: sans-serif;
+    }
+  }
+  p{
+    margin:0;
+  }
+  img{
+    margin-right: 10px;
+    float: left;
+  }
+  .block{
+    display: inline-block;
+  }
+
+}
