--- a/_includes/form.html
+++ b/_includes/form.html
@@ -10,8 +10,9 @@
   </label>
 
   <label class="m_author" for="m_author">
-    Author
-    <input class="fm" type="text" name="m_author" value="" placeholder="author">
+    GitHub Username
+    <input class="fm" type="text" name="m_author" value="" placeholder="GitHub Username">
+    <span>Only GitHub usernames will be allowed.</span>
   </label>
 
   <label class="m_msg" for="m_msg">
