--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,7 +8,7 @@ layout: default
 		<div class="entry">
       <a href="https://github.com/{{ post.author }}"><img src="https://github.com/{{ post.author }}.png?size=40" alt="{{ post.author }}"></a>
       <div class="block">
-        <h5><a href="https://github.com/{{ post.author }}">{{ post.author }}</a> <a href="https://github.com/{{ post.author }}" class="date">{{ post.date | date: "%b %d, %Y" }}</a></h5>
+        <h5><a href="https://github.com/{{ post.author }}">{{ post.author }}</a> <a href="https://github.com/{{ post.author }}" class="date" title="{{ post.date | date: "%b %d, %Y %H:%M:%S" }}">{{ post.date | date: "%H:%M:%S" }}</a></h5>
 
         {{ post.content }}
       </div>
