--- a/_includes/form.html
+++ b/_includes/form.html
@@ -1,10 +1,10 @@
 <form id="open-form" action="index.html" method="post">
-  <label class="m_datetime" for="m_datetime">
+  <label class="m_datetime hidden" for="m_datetime">
     date/time
     <input class="fm" type="text" name="m_datetime" value="" placeholder="date">
   </label>
 
-  <label class="m_title" for="m_title">
+  <label class="m_title hidden" for="m_title">
     Title
     <input class="fm" type="text" name="m_title" value="" placeholder="title">
   </label>
@@ -17,7 +17,7 @@
 
   <label class="m_msg" for="m_msg">
     Message
-    <textarea class="fm" name="m_msg" placeholder="mgs"></textarea>
+    <textarea class="fm" name="m_msg" placeholder="hi"></textarea>
   </label>
 
   <pre id="filename">---</pre>
